<resources>
    <string name="app_name">MVVM_DAGGER_ITEO</string>
    <string name="app_text">_ITEO APP_</string>
    <string name="er_brand_field_required">Brand field required</string>
    <string name="er_color_field_required">Color field required</string>
    <string name="er_lat_field_required">latitude field required</string>
    <string name="er_lng_field_required">longitude field required</string>
    <string name="er_model_field_required">Model field required</string>
    <string name="er_registration_field_required">Registration field required</string>
    <string name="er_year_field_required">Year field required</string>
    <string name="er_owner_field_required">Owner field required</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="tag_sync">Sync</string>
    <string name="tag_brand">Brand</string>
    <string name="tag_color">Color</string>
    <string name="tag_model">Model</string>
    <string name="tag_registration">Registration</string>
    <string name="tag_year">Year</string>
    <string name="tag_owner">Owner</string>
    <string name="tag_submit">Submit</string>
    <string name="tag_close">Close</string>
    <string name="tag_list">List</string>
    <string name="tag_map">Map</string>
    <string name="msg_new_car_added">New car added successfully</string>
    <string name="map_api_key"></string>
    <string name="tag_pick_color">Pick Color</string>
    <string name="tag_pick_location">Pick Location</string>
    <string name="tag_location">Location</string>
    <string name="tag_location_picked">Location Picked</string>
    <string name="tag_add_new_car">Add New Car</string>
    <string name="msg_drag_marker_to_select_location">Drag Marker to Select Location</string>
    <string name="msg_this_action_not_available_offline">This Action Not Available offline</string>
    <string name="msg_car_submitted_successfully">Car Submitted Successfully</string>
    <string name="msg_no_data_available">No data available</string>
</resources>