<?xml version="1.0" encoding="utf-8"?>
<layout    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
<androidx.constraintlayout.widget.ConstraintLayout

    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.cars.views.NewCarFragment">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        android:background="@color/teal_main"
        app:layout_scrollFlags="scroll|enterAlways"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:title="">
        <ImageView
            android:id="@+id/img_back"
            android:scaleType="centerCrop"
            android:layout_gravity="center_vertical"
            android:src="@drawable/ic_arrow_back"
            android:layout_width="@dimen/dim_24dp"
            android:layout_height="@dimen/dim_24dp" />
        <TextView
            android:gravity="center"
            android:textSize="@dimen/font_24"
            android:textColor="@color/white"
            android:text="@string/tag_add_new_car"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
    </androidx.appcompat.widget.Toolbar>

    <TextView
        android:layout_margin="@dimen/dim_24dp"
        android:id="@+id/textView2"
        style="@style/form_label"
        android:text="@string/tag_brand"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar" />

    <EditText
        android:inputType="text"
        android:imeOptions="actionNext"
        android:nextFocusForward="@id/edt_model"
        android:layout_marginEnd="@dimen/dim_24dp"
        android:id="@+id/edt_brand"
        style="@style/form_edit"
        app:layout_constraintBottom_toBottomOf="@+id/textView2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textView2"
        app:layout_constraintTop_toTopOf="@+id/textView2" />

    <TextView
        android:id="@+id/textView4"
        style="@style/form_label"
        android:text="@string/tag_model"
        app:layout_constraintStart_toStartOf="@+id/textView2"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <EditText
        android:inputType="text"
        android:imeOptions="actionNext"
        android:nextFocusForward="@id/edt_year"
        android:id="@+id/edt_model"
        style="@style/form_edit"
        app:layout_constraintBottom_toBottomOf="@+id/textView4"
        app:layout_constraintEnd_toEndOf="@+id/edt_brand"
        app:layout_constraintStart_toEndOf="@+id/textView2"
        app:layout_constraintTop_toTopOf="@+id/textView4" />

    <TextView
        android:id="@+id/textView3"
        style="@style/form_label"
        android:text="@string/tag_color"
        app:layout_constraintStart_toStartOf="@+id/textView2"
        app:layout_constraintTop_toBottomOf="@+id/textView4" />


    <TextView
        android:id="@+id/txt_color"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@color/transparent_black"
        android:drawableEnd="@drawable/color_picker"
        android:gravity="center"
        android:paddingEnd="@dimen/dim_15dp"
        android:text="@string/tag_pick_color"
        app:layout_constraintBottom_toBottomOf="@+id/textView3"
        app:layout_constraintEnd_toEndOf="@+id/edt_model"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/edt_year"
        app:layout_constraintTop_toTopOf="@+id/textView3"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/textView5"
        style="@style/form_label"
        android:text="@string/tag_registration"
        app:layout_constraintStart_toStartOf="@+id/textView7"
        app:layout_constraintTop_toBottomOf="@+id/textView7" />

    <EditText
        android:inputType="text"
        android:imeOptions="actionDone"
        android:id="@+id/edt_registration"
        style="@style/form_edit"
        app:layout_constraintBottom_toBottomOf="@+id/textView5"
        app:layout_constraintEnd_toEndOf="@+id/txt_color"
        app:layout_constraintStart_toEndOf="@+id/textView5"
        app:layout_constraintTop_toTopOf="@+id/textView5" />

    <TextView
        android:id="@+id/textView7"
        style="@style/form_label"
        android:text="@string/tag_year"
        app:layout_constraintStart_toStartOf="@+id/textView3"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <EditText
        android:imeOptions="actionNext"
        android:nextFocusForward="@id/edt_registration"
        android:id="@+id/edt_year"
        style="@style/form_edit"
        android:inputType="number"
        android:maxLength="4"
        app:layout_constraintBottom_toBottomOf="@+id/textView7"
        app:layout_constraintEnd_toEndOf="@+id/edt_model"
        app:layout_constraintStart_toEndOf="@+id/textView5"
        app:layout_constraintTop_toTopOf="@+id/textView7" />

    <TextView
        android:id="@+id/textView8"
        style="@style/form_label"
        android:text="@string/tag_owner"
        app:layout_constraintStart_toStartOf="@+id/textView5"
        app:layout_constraintTop_toBottomOf="@+id/textView5" />

    <Spinner
        android:id="@+id/spnr_persons"
        android:layout_width="0dp"
        android:layout_height="@dimen/dim_50dp"
        app:layout_constraintBottom_toBottomOf="@+id/textView8"
        app:layout_constraintEnd_toEndOf="@+id/edt_year"
        app:layout_constraintStart_toStartOf="@+id/edt_registration"
        app:layout_constraintTop_toTopOf="@+id/textView8" />

    <TextView
        android:id="@+id/textView478"
        style="@style/form_label"
        android:text="@string/tag_location"
        app:layout_constraintStart_toStartOf="@+id/textView8"
        app:layout_constraintTop_toBottomOf="@+id/textView8" />

    <TextView
        android:id="@+id/txt_map_picker"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@color/light_grey"
        android:drawableEnd="@drawable/map_picker"
        android:drawablePadding="@dimen/dim_10dp"
        android:gravity="center"
        android:paddingEnd="@dimen/dim_15dp"
        android:text="@string/tag_pick_location"
        app:layout_constraintBottom_toBottomOf="@+id/textView478"
        app:layout_constraintEnd_toEndOf="@+id/edt_model"
        app:layout_constraintStart_toStartOf="@+id/edt_registration"
        app:layout_constraintTop_toTopOf="@+id/textView478" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_submit"
        android:layout_width="@dimen/dim_200dp"
        android:layout_height="@dimen/dim_60dp"
        android:backgroundTint="@color/teal_main"
        android:textSize="@dimen/font_20"
        android:text="@string/tag_submit"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
</layout>